--- a/kitty.conf
+++ b/kitty.conf
@@ -1,58 +1,44 @@
 # font family 
-# font_family MartianMono Nerd Font
 font_family Hack Nerd Font Regular
-# font_family Jetbrainsmono nerd font
-# font_family Monomoki nerd font
-
-# Set font size
-# font_size 13.0
 font_size 15.0 
-
-# Enable ligatures for nerd fonts
 enable_ligatures yes
 
-# Gruvbox Theme (Dark)
-background #282828
-foreground #ebdbb2
-selection_background #3c3836
-selection_foreground #fbf1c7
-cursor #fbf1c7
+# Rose Pine Dark Theme
+background #191724
+foreground #e0def4
+selection_background #2a2837
+selection_foreground #e0def4
+cursor #e0def4
 
-# Gruvbox Accent Colors
-color0  #282828
-color1  #cc241d
-color2  #98971a
-color3  #d79921
-color4  #458588
-color5  #b16286
-color6  #689d6a
-color7  #a89984
-color8  #928374
-color9  #fb4934
-color10 #b8bb26
-color11 #fabd2f
-color12 #83a598
-color13 #d3869b
-color14 #8ec07c
-color15 #ebdbb2
+# Rose Pine Dark Colors
+color0  #26233a
+color1  #eb6f92
+color2  #31748f
+color3  #f6c177
+color4  #9ccfd8
+color5  #c4a7e7
+color6  #ebbcba
+color7  #e0def4
+color8  #6e6a86
+color9  #eb6f92
+color10 #31748f
+color11 #f6c177
+color12 #9ccfd8
+color13 #c4a7e7
+color14 #ebbcba
+color15 #e0def4
 
-# Ensure Kitty allows resizing freely
+# Window settings
 resize_with_input yes
 remember_window_size yes
-
-# Set background opacity (optional)
 background_opacity 0.8
-
-# Enable true color support
 true_color true
-
-# Remove window title bar
-# hide_window_decorations yes
-
-# Allow Kitty to remember the window size from the previous session
 remember_window_size yes
-
-# Optional: Enable Kitty to open windows with a larger border
 borderless_window yes
 map ctrl+up resize_window taller
 map ctrl+down resize_window shorter 3
+window_padding_width 2
+placement_strategy center
+
+hide_window_decorations yes
+titlebar-only yes
